--- a/index.html
+++ b/index.html
@@ -46,6 +46,28 @@
         </div>
       </div>
     </div>
+    <div class="search__section">
+      <div class="container">
+        <div class="row">
+          <div class="inner-flex">
+            <div class="phone__group">
+              <div class="phone__text">לקבל פרטים נוספים חייגו:</div>
+              <div class="search__number">072-3728117 </div>
+              <div class="phone__text">או שלחו טופס: </div>
+            </div>
+            <div class="search__form"> 
+              <form name="search__form">
+                <div class="form-group">
+                  <input class="form-control" type="text" placeholder=""/>
+                  <input class="form-control" type="text" placeholder=""/>
+                  <button class="btn btn-success" type="submit">שלח</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
   <footer class="footer">
     <ul class="footer__list">
