убрал слэши в путях изображений

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="header__logo"><a class="logo__link" href="/"> 
-              <div class="logo__pic"><img src="/img/logo.png"/></div></a></div>
+              <div class="logo__pic"><img src="img/logo.png"/></div></a></div>
           <div class="header__menu">
             <nav class="menu">
               <li class="menu-item"><a href="#">השכרת_אוהלים</a></li>
@@ -28,7 +28,7 @@
             </nav>
           </div>
           <div class="header__phone"><a class="link__phone" href="#call">
-              <div class="icon"><img class="icon__phone" src="/img/phone.png"/></div>
+              <div class="icon"><img class="icon__phone" src="img/phone.png"/></div>
               <div class="phone__group">
                 <div class="phone__label">התקשרו לפרטים:</div>
                 <div class="phone__number">072-3728117</div>
@@ -38,7 +38,7 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="header__banner" style="background: url(/img/banner.jpg) 50% 50% no-repeat;">
+        <div class="header__banner" style="background: url(img/banner.jpg) 50% 50% no-repeat;">
           <div class="banner__group-text">
             <div class="banner__title">רוניאל אוהלים וציוד לאירועים</div>
             <div class="banner__descripton">מתמחים במתן מגוון פתרונות של השכרת אוהלים וציוד לאירועים</div>
