--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
@@ -20,11 +21,11 @@
               <div class="logo__pic"><img src="img/logo.png"/></div></a></div>
           <div class="header__menu">
             <nav class="menu">
-              <li class="menu-item"><a href="#">השכרת_אוהלים</a></li>
-              <li class="menu-item"><a href="#">השכרת_אוהלים</a></li>
-              <li class="menu-item"><a href="#">השכרת_ציוד_לאירועים</a></li>
-              <li class="menu-item"><a href="#">אזורי_שירות</a></li>
-              <li class="menu-item"><a href="#">צור_קשר</a></li>
+              <li class="menu-item"><a href="#">השכרת אוהלים</a></li>
+              <li class="menu-item"><a href="#">השכרת אוהלים</a></li>
+              <li class="menu-item"><a href="#">השכרת ציוד לאירועים</a></li>
+              <li class="menu-item"><a href="#">אזורי שירות</a></li>
+              <li class="menu-item"><a href="#">צור קשר</a></li>
             </nav>
           </div>
           <div class="header__phone"><a class="link__phone" href="#call">
