--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row">
           <div class="inner-flex">
-            <div class="phone__group">
+            <div class="search-phone__group">
               <div class="phone__text">לקבל פרטים נוספים חייגו:</div>
               <div class="search__number">072-3728117 </div>
               <div class="phone__text">או שלחו טופס: </div>
@@ -57,8 +57,8 @@
             <div class="search__form"> 
               <form name="search__form">
                 <div class="form-group">
-                  <input class="form-control" type="text" placeholder=""/>
-                  <input class="form-control" type="text" placeholder=""/>
+                  <input class="form-control" type="text" placeholder="שם מלא"/>
+                  <input class="form-control" type="text" placeholder="טלפון"/>
                   <button class="btn btn-success" type="submit">שלח</button>
                 </div>
               </form>
