изменения перед лагами на хостинге - добавлена 2 секция

--- a/index.html
+++ b/index.html
@@ -71,25 +71,52 @@
     <div class="section1">
      <div class="section1__title">למה רוניאל אוהלים?</div>
      <hr>
-     <div class="section__list">
-      <div class="section__item item">
-       <div class="item__img"><img src="img/shirut.png" alt="shirut"></div>
-       <div class="item__title">משלוח והתקנה בבית הלקוח</div>
-       <div class="item__description">במידה והנכם לא יכולים לבצע איסוף עצמי של הפריטים, אנו מבצעים גם משלוח עד הבית של המוצרים הנדרשים, החל מאוהלים, כסאות, מזגנים ועוד.</div>
+     <div class="section1__list">
+      <div class="section1__item">
+       <div class="section1__item-img"><img src="img/shirut.png" alt="shirut"></div>
+       <div class="section1__item-title">שירות מכל הלב</div>
+       <div class="section1__item-description">רוניאל אוהלים מעניקה מזה שנים שירות אדיב ומקצועי לקהל לקוחותיה, חברתנו לוקחת בעדיפות ראשונה את כל הקשור למתן שירות מקצועי תוך התחשבות בצרכי הלקוח</div>
       </div>
-      <div class="section__item item">
-       <div class="item__img"><img src="img/ihut.png" alt="ihut"></div>
-       <div class="item__title">משלוח והתקנה בבית הלקוח</div>
-       <div class="item__description">רוניאל אוהלים משכירה ציוד חדשני לאירועים, אנו דואגים לשפר ולשדרג באופן קבוע את הציוד שלנו, ולהעניק ללקוח חוויה של מוצרים חדישים.</div>
+      <div class="section1__item">
+       <div class="section1__item-img"><img src="img/ihut.png" alt="ihut"></div>
+       <div class="section1__item-title">משלוח והתקנה בבית הלקוח</div>
+       <div class="section1__item-description">רוניאל אוהלים משכירה ציוד חדשני לאירועים, אנו דואגים לשפר ולשדרג באופן קבוע את הציוד שלנו, ולהעניק ללקוח חוויה של מוצרים חדישים.</div>
       </div>
-      <div class="section__item item">
-       <div class="item__img"><img src="img/mishloah.png" alt="mishloah"></div>
-       <div class="item__title">שירות מכל הלב</div>
-       <div class="item__description">רוניאל אוהלים מעניקה מזה שנים שירות אדיב ומקצועי לקהל לקוחותיה, חברתנו לוקחת בעדיפות ראשונה את כל הקשור למתן שירות מקצועי תוך התחשבות בצרכי הלקוח</div>
+      <div class="section1__item">
+       <div class="section1__item-img"><img src="img/mishloah.png" alt="mishloah"></div>
+       <div class="section1__item-title">משלוח והתקנה בבית הלקוח</div>
+       <div class="section1__item-description">במידה והנכם לא יכולים לבצע איסוף עצמי של הפריטים, אנו מבצעים גם משלוח עד הבית של המוצרים הנדרשים, החל מאוהלים, כסאות, מזגנים ועוד.</div>
       </div>    
      </div>
     </div>
-    
+
+    <div class="section2">
+     <div class="section2__title">בין שירותנו:</div>
+     <hr>
+     <div class="section2__list">
+      <div class="section2__item">
+       <div class="section2__item-img"><img src="img/ohel.png" alt="ohel"></div>
+       <div class="section2__item-title">השכרת אוהלים</div>
+       <div class="section2__item-description">השכרת אוהלים מסוגים שונים לכל מטרה, אוהל ענק, אוהל לאירועים, אוהל אבלים ועוד.ישנה אפשרות לקבל ציוד נלווה: השכרת מזרונים ,מחצלות וציוד נילווה</div>
+      </div>
+      <div class="section2__item">
+       <div class="section2__item-img"><img src="img/kisaot.png" alt="kisaot"></div>
+       <div class="section2__item-title">השכרת כסאות</div>
+       <div class="section2__item-description">השכרת כסאות מסוגים שונים לאירועים, השכרת כסאות לאוהל אבלים, השכרת כסאות פלסטיק, השירות ניתן בשירות עצמי, או באפשרות של הובלה והרכבה.</div>
+      </div>
+      <div class="section2__item">
+       <div class="section2__item-img"><img src="img/mazgan.png" alt="mazgan"></div>
+       <div class="section2__item-title">השכרת מזגן נייד</div>
+       <div class="section2__item-description">שירות השכרת שולחנות לאירועים, השכרת שולחנות לאוהל אבלים, באפשרותך להשכיר אוהל אבלים עם כל הרהיטים הנדרשים.</div>
+      </div>   
+      <div class="section2__item">
+       <div class="section2__item-img"><img src="img/shulhan_ohel.png" alt="shulhan_ohel"></div>
+       <div class="section2__item-title">השכרת שולחנות</div>
+       <div class="section2__item-description">שירות השכרת שולחנות לאירועים, השכרת שולחנות לאוהל אבלים, באפשרותך להשכיר אוהל אבלים עם כל הרהיטים הנדרשים.</div>
+      </div>
+     </div>
+    </div>
+
     <footer class="footer">
      <ul class="footer__list">
       <li class="footer__item"><a class="site__link" href="/"> <span class="link__text">          </span></a></li>
