Окончательная доработка домашней

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
   <link rel="stylesheet" href="css/font-awesome.min.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700,900&amp;subset=hebrew" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css"/>
  </head>
  <body>
@@ -67,7 +67,6 @@
       </div>
      </div>
     </div>
-
     <div class="section1">
      <div class="section1__title">למה רוניאל אוהלים?</div>
      <hr>
@@ -86,10 +85,9 @@
        <div class="section1__item-img"><img src="img/mishloah.png" alt="mishloah"></div>
        <div class="section1__item-title">משלוח והתקנה בבית הלקוח</div>
        <div class="section1__item-description">במידה והנכם לא יכולים לבצע איסוף עצמי של הפריטים, אנו מבצעים גם משלוח עד הבית של המוצרים הנדרשים, החל מאוהלים, כסאות, מזגנים ועוד.</div>
-      </div>    
+      </div>
      </div>
     </div>
-
     <div class="section2">
      <div class="section2__title">בין שירותנו:</div>
      <hr>
@@ -108,7 +106,7 @@
        <div class="section2__item-img"><img src="img/mazgan.png" alt="mazgan"></div>
        <div class="section2__item-title">השכרת מזגן נייד</div>
        <div class="section2__item-description">שירות השכרת שולחנות לאירועים, השכרת שולחנות לאוהל אבלים, באפשרותך להשכיר אוהל אבלים עם כל הרהיטים הנדרשים.</div>
-      </div>   
+      </div>
       <div class="section2__item">
        <div class="section2__item-img"><img src="img/shulhan_ohel.png" alt="shulhan_ohel"></div>
        <div class="section2__item-title">השכרת שולחנות</div>
@@ -116,14 +114,83 @@
       </div>
      </div>
     </div>
-
     <footer class="footer">
-     <ul class="footer__list">
-      <li class="footer__item"><a class="site__link" href="/"> <span class="link__text">          </span></a></li>
-      <li class="footer__item">
-       <div class="footer__copyright">© </div>
-      </li>
-     </ul>
+     <div class="footer__list">
+      <div class="footer__item">
+       <div class="footer__item-title">אודות</div>
+       <hr align="right">
+       <div class="footer__item-content">
+        רוניאל אוהלים מעניקה שירותי השכרת אוהלים לכל מטרה, השכרת ציוד לאירועים מסוגים שונים. אנו דואגים ללקוח תוך הקפדה על שירות ומקצועיות בכל הנדרש.
+        <div class="footer__phone">טלפון לבירורים: 072-372-8117 </div>
+        <div class="footer__cards">מכבדים את כל סוגי כרטיסי האשראי:
+         <img src="img/ashrai.png" alt="ashrai">
+        </div>
+       </div>
+      </div>
+      <div class="footer__item">
+       <div class="footer__item-title">שעות פתיחה</div>
+       <hr align="right">
+       <div class="footer__item-content">
+        <table>
+         <tr>
+          <td><span>ראשון</span></td>
+          <td align="left">20:00 - 09:00</td>          
+         </tr>
+         <tr>
+          <td><span>שני</span></td>
+          <td align="left">18:00 - 08:00</td>
+         </tr>
+         <tr>
+          <td><span>שלישי</span></td>
+          <td align="left">18:00 - 08:00</td>
+         </tr>
+         <tr>
+          <td><span>רביעי</span></td>
+          <td align="left">18:00 - 08:00</td>
+         </tr>
+         <tr>
+          <td><span>חמישי</span></td>
+          <td align="left">18:00 - 08:00</td>
+         </tr>
+         <tr>
+          <td><span>שישי</span></td>
+          <td align="left">14:00 - 08:00</td>
+         </tr>
+         <tr>
+          <td><span>שבת</span></td>
+          <td align="left">סגור</td>
+         </tr>
+        </table>
+       </div>
+      </div>
+      <div class="footer__item">
+       <div class="footer__item-title">כתובת החנות:</div>
+       <hr align="right">
+       <div class="footer__item-content">
+        <img src="img/footer_map.jpg" alt="map">
+       </div>
+      </div>
+      <div class="footer__item">
+       <div class="footer__item-title">השכרת אוהלים</div>
+       <hr align="right">
+       <div class="footer__item-content">
+        <ul>
+         <li>אוהלים ממוזגים</li>
+         <li>אוהל ענק</li>
+         <li>השכרת אוהל אבלים</li>
+         <li>סוכת אבלים</li>
+         <li>השכרת כסאות</li>
+         <li>השכרת שולחנות</li>
+         <li>השכרת מזגן נייד</li>
+        </ul>
+       </div>
+      </div>
+     </div>
+     <div class="footer__bottom">
+      <img src="img/digi_logo.png" alt="">
+      <div class="footer__bottom-text">קידום אתרים בגוגל</div>
+      <div class="footer__bottom-copyright">© 2018 כל הזכויות שמורות</div>
+     </div>
     </footer>
    </body>
    <!--[if lt IE 9]>
