--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
       <div class="logo__pic"><img src="img/logo.png"/></div></a></div>
       <div class="header__menu">
        <nav class="menu">
-        <li class="menu-item"><a href="#">השכרת אוהלים</a></li>
+        <li class="menu-item has_submenu">
+         <a href="#">השכרת אוהלים</a>
+         <ul class="menu-item_submenu">
+          <li><a href="#">צור קשר</a></li>
+          <li><a href="#">צור קשר</a></li>
+          <li><a href="#">צור קשר</a></li>
+          <li><a href="#">צור קשר</a></li>
+         </ul>
+        </li>
         <li class="menu-item"><a href="#">השכרת ציוד לאירועים</a></li>
         
         <li class="menu-item"><a href="#">אזורי שירות</a></li>
@@ -216,4 +224,5 @@
    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+   <script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
   </html>
