--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
      </div>
     </header>
-    <div class="container">
+    <div class="container section__banner" style="margin-top: 120px;">
      <div class="row">
       <div class="header__banner">
        <div class="banner__group-text">
