--- a/index.html
+++ b/index.html
@@ -15,8 +15,20 @@
   <header class="header">
    <div class="container">
     <div class="row justify-content-between align-items-center">
-     <div class="header__logo"><a class="logo__link" href="/">
-      <div class="logo__pic"><img src="img/logo.png"/></div></a></div>
+     <div class="menu__burger">
+      MENU
+<!--       <span></span>
+      <span></span>
+      <span></span> -->
+     </div>
+
+     <div class="header__logo">
+      <a class="logo__link" href="/">
+        <div class="logo__pic">
+          <img src="img/logo.png"/>
+        </div>
+       </a>
+      </div>
       <div class="header__menu">
        <nav class="menu">
         <li class="menu-item has_submenu">
@@ -122,8 +134,10 @@
       </div>
      </div>
     </div>
+
     <footer class="footer">
      <div class="footer__list">
+
       <div class="footer__item">
        <div class="footer__item-title">אודות</div>
        <hr align="right">
@@ -135,6 +149,7 @@
         </div>
        </div>
       </div>
+
       <div class="footer__item">
        <div class="footer__item-title">שעות פתיחה</div>
        <hr align="right">
@@ -171,6 +186,7 @@
         </table>
        </div>
       </div>
+
       <div class="footer__item">
        <div class="footer__item-title">כתובת החנות:</div>
        <hr align="right">
@@ -195,6 +211,7 @@
     <div class="map__link"><a href="http://digitouch.co.il"></a></div>
        </div>
       </div>
+
       <div class="footer__item">
        <div class="footer__item-title">השכרת אוהלים</div>
        <hr align="right">
@@ -210,9 +227,10 @@
         </ul>
        </div>
       </div>
+
      </div>
      <div class="footer__bottom">
-      <img src="img/digi_logo.png" alt="">
+      <a href="http://digitouch.co.il"><img src="img/digi_logo.png" alt=""></a>
       <div class="footer__bottom-text">קידום אתרים בגוגל</div>
       <div class="footer__bottom-copyright">© 2018 כל הזכויות שמורות</div>
      </div>
