главная страница сделана полностью с пп

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</header>
 		<!-- HEADER START -->
 		
-		<div class="container section__banner">
+		<div class="container section__banner" style="max-width: 1210px;">
 			<div class="row">
 				<div class="header__banner">
 					<div class="banner__group-text">
