--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 								<li class="menu-item"><a href="#">צור קשר</a></li>
 							</nav>
 						</div>
+						<div class="menu_fon"></div>
 						<div class="header__phone">
 							<div class="icon">
 								<a href="tel:0723728117">
@@ -267,8 +268,10 @@
 				
 			</div>
 			<div class="footer__bottom">
+				<div class="footer__links">
 				<a href="http://digitouch.co.il"><img src="img/digi_logo.png" alt=""></a>
-				<div class="footer__bottom-text"> <a href="http://digitouch.co.il">קידום אתרים בגוגל</a></div>
+				<div class="footer__bottom-text"> <a href="http://digitouch.co.il" target="_blank">קידום אתרים בגוגל</a></div>
+				</div>
 				<div class="footer__bottom-copyright">© 2018 כל הזכויות שמורות</div>
 			</div>
 		</footer>
